--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -56,16 +56,17 @@
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:scaleType="centerInside"
+            android:layout_height="300dp"
+            android:scaleType="fitXY"
+
             android:layout_gravity="center"
-            android:src="@mipmap/ic_launcher"
+
             android:id="@+id/image_added"/>
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="80dp"
             android:hint="Description"
             android:id="@+id/description"
             android:maxLines="5"/>
