--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -25,6 +25,9 @@
                 android:layout_height="50dp"
                 android:layout_alignParentStart="true"
                 android:text="ANBEAN"
+                android:textStyle="bold"
+
+
                 android:textSize="45dp"
                 android:textColor="@color/gray_blue"/>
 
