--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,7 +13,7 @@
         android:layout_width="217dp"
         android:layout_height="50dp"
         android:layout_marginBottom="10dp"
-        android:text="Hoşgeldiniz"
+        android:text="Welcome"
         android:textAlignment="center"
         android:textSize="36sp"
         app:layout_constraintBottom_toTopOf="@+id/textViewGiris"
@@ -63,7 +63,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="120dp"
         android:layout_marginBottom="37dp"
-        android:text="Devam edebilmek için lütfen giriş yapınız."
+        android:text="Please login to continue."
         android:textAlignment="center"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/editTextId"
@@ -97,7 +97,7 @@
         android:layout_width="300dp"
         android:layout_height="30dp"
         android:layout_marginTop="20dp"
-        android:text="Şifrenizi unuttuysanız buraya basın"
+        android:text="If you forgot your password, click here"
         android:onClick="forgotpassword"
         android:textAlignment="center"
         android:textSize="16sp"
@@ -110,10 +110,10 @@
 
     <TextView
         android:id="@+id/textViewKayit"
-        android:layout_width="253dp"
-        android:layout_height="30dp"
+        android:layout_width="367dp"
+        android:layout_height="31dp"
         android:layout_marginTop="184dp"
-        android:text="Hesabınız yoksa lütfen kayıt olun"
+        android:text="If you do not have an account, please register"
         android:textAlignment="center"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
