--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,11 +25,14 @@
                 <TextView
                     android:layout_width="180dp"
                     android:layout_height="50dp"
+                    android:id="@+id/text"
                     android:layout_alignParentStart="true"
+                    android:layout_marginEnd="17dp"
+                    android:layout_toEndOf="@+id/havaNe"
+
+
                     android:text="ANBEAN"
                     android:textColor="@color/gray_blue"
-
-
                     android:textSize="45dp"
                     android:textStyle="bold" />
 
@@ -56,22 +59,33 @@
 
                 <TextView
                     android:id="@+id/weatherDetail"
-                    android:layout_width="106dp"
-                    android:layout_height="31dp"
+                    android:layout_width="101dp"
+                    android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentEnd="true"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="12dp"
-                    android:textAlignment="center" />
+                    android:layout_marginTop="1dp"
+                    android:layout_marginEnd="25dp"
+                    android:textAlignment="textStart" />
+
+                <TextView
+                    android:id="@+id/weatherDescription"
+                    android:layout_width="124dp"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginTop="24dp"
+                    android:layout_marginEnd="2dp"
+                    android:textAlignment="textStart" />
 
                 <Button
                     android:id="@+id/havaNe"
-                    android:layout_width="176dp"
-                    android:layout_height="38dp"
+                    android:layout_width="135dp"
+                    android:layout_height="36dp"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentEnd="true"
                     android:layout_marginTop="7dp"
                     android:layout_marginEnd="22dp"
+                    android:layout_below="@+id/text"
                     android:onClick="havaNedir"
                     android:text="Weather ınfo"
                     android:textSize="10dp" />
