--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,111 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?android:attr/windowBackground"
-        android:id="@+id/top_bar">
-
-        <Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="?android:attr/windowBackground">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:layout_width="180dp"
-                    android:layout_height="50dp"
-                    android:id="@+id/text"
-                    android:layout_alignParentStart="true"
-                    android:layout_marginEnd="17dp"
-                    android:layout_toEndOf="@+id/havaNe"
-
-
-                    android:text="ANBEAN"
-                    android:textColor="@color/gray_blue"
-                    android:textSize="45dp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/location"
-                    android:layout_width="70dp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginHorizontal="60dp"
-                    android:layout_marginTop="1dp"
-                    android:layout_marginEnd="131dp"
-                    android:layout_marginBottom="9dp"
-                    android:textAlignment="center" />
-
-                <TextView
-                    android:id="@+id/temp"
-                    android:layout_width="71dp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginTop="24dp"
-                    android:layout_marginEnd="130dp"
-                    android:textAlignment="center" />
-
-                <TextView
-                    android:id="@+id/weatherDetail"
-                    android:layout_width="101dp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginTop="1dp"
-                    android:layout_marginEnd="25dp"
-                    android:textAlignment="textStart" />
-
-                <TextView
-                    android:id="@+id/weatherDescription"
-                    android:layout_width="124dp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginTop="24dp"
-                    android:layout_marginEnd="2dp"
-                    android:textAlignment="textStart" />
-
-                <Button
-                    android:id="@+id/havaNe"
-                    android:layout_width="135dp"
-                    android:layout_height="36dp"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginTop="7dp"
-                    android:layout_marginEnd="22dp"
-                    android:layout_below="@+id/text"
-                    android:onClick="havaNedir"
-                    android:text="Weather ınfo"
-                    android:textSize="10dp" />
-
-
-            </RelativeLayout>
-
-        </Toolbar>
-
-    </com.google.android.material.appbar.AppBarLayout>
 
     <FrameLayout
-        android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/bar"
-        android:layout_below="@id/top_bar"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="0dp"
-        android:layout_marginBottom="-5dp">
+        android:id="@+id/fragment_container"/>
 
-
-    </FrameLayout>
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -126,7 +28,7 @@
             app:labelVisibilityMode="unlabeled"
             app:menu="@menu/bottom_navigation"
             android:background="?android:attr/windowBackground"/>
-    </com.google.android.material.appbar.AppBarLayout>
 
+    </com.google.android.material.appbar.AppBarLayout>
 
 </RelativeLayout>
