--- a/app/src/main/res/layout/post_item.xml
+++ b/app/src/main/res/layout/post_item.xml
@@ -30,7 +30,7 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:id="@+id/image_profile"
-                android:src="@drawable/ic_launcher_background"
+                android:src="@drawable/placeholder"
                 android:layout_margin="10dp"/>
 
             <TextView
@@ -52,7 +52,7 @@
             <ImageView
                 android:id="@+id/post_image"
                 android:layout_width="0dp"
-                android:src="@mipmap/ic_launcher"
+                android:src="@drawable/placeholder"
                 android:layout_height="0dp"
                 app:layout_constraintDimensionRatio="1:1"
                 app:layout_constraintEnd_toEndOf="parent"
