--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -9,7 +9,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:id="@+id/image_profile"
-        android:src="@mipmap/ic_launcher"/>
+        android:src="@drawable/placeholder"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
