--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -30,6 +30,7 @@
                     android:layout_alignParentStart="true" />
 
                 <ImageView
+                    android:id="@+id/chatbutton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"
